--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-.DS_Store
-._.DS_Store
 **/.DS_Store
 **/._.DS_Store
 
 4주차/
 김주민(97)_사전과제/
-노마드코더 React/node_modules/
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+**/node_modules
+**/.pnp
+**/.pnp.js
+
+# testing
+**/coverage
+
+# production
+**/build
+
+# misc
+**/.DS_Store
+**/.env.local
+**/.env.development.local
+**/.env.test.local
+**/.env.production.local
+
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
